# eeyoreROS

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.bash  nodelet_plugins.xml  package.xml  run.bash
config/: boson.yaml  electro_optical.yaml
etc/: 40-flir-spinnaker.rules  90-boson.rules  99-evkv2.rules  bosondev.py  eventdev.py  spindev.py
include/eeyoreROS/: boson_wrapper.hpp  electro_optical_nodelet_wrapper.hpp  electro_optical_wrapper.hpp
install/spinnaker-3.2.0.57-amd64/: README  libgentl_3.2.0.57_amd64.deb  libspinnaker-c-dev_3.2.0.57_amd64.deb  libspinnaker-c_3.2.0.57_amd64.deb  libspinnaker-dev_3.2.0.57_amd64.deb  libspinvideo-c-dev_3.2.0.57_amd64.deb  libspinvideo-c_3.2.0.57_amd64.deb  libspinvideo-dev_3.2.0.57_amd64.deb  libspinvideo_3.2.0.57_amd64.deb  spinupdate-dev_3.2.0.57_amd64.deb  spinupdate_3.2.0.57_amd64.deb  spinview-qt-dev_3.2.0.57_amd64.deb  spinview-qt_3.2.0.57_amd64.deb
install/spinnaker_python/Examples/Python3/: BufferHandling.py
launch/: boson.launch  electro_optical.launch  electro_optical_nodelet.launch  eoir.launch
src/: boson_node.cpp  boson_wrapper.cpp  electro_optical_node.cpp  electro_optical_nodelet.cpp  electro_optical_nodelet_wrapper.cpp  electro_optical_wrapper.cpp
